--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Face Recognition Search Engine</h1>
     <form id="searchForm">
-      <input type="file" id="imageUpload" accept="image/*" required><br>
+      <input type="file" id="imageUpload" accept="image/*"><br>
       <input type="text" id="name" placeholder="First Name"><br>
       <input type="text" id="lastName" placeholder="Last Name"><br>
       <input type="text" id="country" placeholder="Country"><br>
