--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Face Recognition Search Engine</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+  <script src="https://cdn.jsdelivr.net/npm/@vladmandic/face-api/dist/face-api.min.js"></script>
 <body>
   <div class="container">
     <h1>Face Recognition Search Engine</h1>
